object clean up, change time display to divs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 	<button id="get-rgb">Get RGB!</button>
 	<div id="rgb" class="display--inline"></div>
 
-	<div id="clock" class="center"></div>
+	<div id="clock" class="center">
+		<div id="clock-hour"></div>
+		<div id="clock-minute"></div>
+		<div id="clock-second"></div>
+	</div>
 <script src="script.js"></script>
 </body>
 </html>
