add increment functions, start to add media queries

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<button id="get-rgb">Get RGB!</button>
 	<div id="rgb" class="display--inline"></div>
 
+	<div class="margin--top">
+		Red: <input id="red-input" /> 
+		Green: <input id="green-input" />
+		Blue: <input id="blue-input" />
+	</div>
+
 	<div id="clock" class="center">
 		<div id="clock-hour"></div>
 		<div id="clock-minute"></div>
