--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	<button id="menu-button" class="menu-margin--left"><i class="fa fa-bars fa-5x" aria-hidden="true"></i></button>
 	<div id="menu" class="menu-margin--left">
 		<button id="get-rgb">Get RGB!</button>
-		<div id="rgb" class="display--inline"></div>
+		<div id="rgb" class="display--inline">
+			<input type="text" id="copy-rgb-value" value="" readonly/>
+		</div>
+		<div id="copy-success">RGB Copied to Clipboard!</div>
+
 
 		<div class="margin--top">
 			<button id="slow" class="web-button">Slow</button>
