add favicon, change title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Color Changer</title>
+	<title>RGB Clock</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<script src="https://use.fontawesome.com/b399aad971.js"></script>
 	<link href="style.css" rel="stylesheet" />
 </head>
